--- a/index.html
+++ b/index.html
@@ -11,10 +11,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="imgs/id-card-regular.png"
+    <link rel="icon" type="image/png" href="imgs/id-card-regular.png">
     <link rel="stylesheet" href="style.css">
     <script scr="main.js" defer></script>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav id="navbar"></nav>
+        <div class="navbar__logo"></div>
+            <img class="logo" src="imgs/id-card-regular.png" >
+            <a href="#">Yoon</a>
+        <ul class="navbar__menu">
+            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item">About</li>
+            <li class="navbar__menu__item">Skills</li>
+            <li class="navbar__menu__item">My work</li>
+            <li class="navbar__menu__item">Testimonial</li>
+            <li class="navbar__menu__item">Contact</li>
+        </ul>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="testimonials"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
