--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav id="navbar"></nav>
+    <nav id="navbar">
         <div class="navbar__logo"></div>
             <img class="logo" src="imgs/id-card-regular.png" >
             <a href="#">Yoon</a>
@@ -29,6 +29,7 @@
             <li class="navbar__menu__item">Testimonial</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
+    </nav>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
