--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo"></div>
-            <img class="logo" src="imgs/id-card-regular.png" >
+            <img class="logo" alt="Yoon's profile logo" src="imgs/id-card-regular.png" >
             <a href="#">Yoon</a>
         <ul class="navbar__menu">
             <li class="navbar__menu__item">Home</li>
@@ -30,6 +30,15 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profilepic.jpg" alt="Yoon's profile photo" class="home__avatar">
+        <h1 class="home__title">Hello, <br> I'm Yoon Lee</h1>
+        <h2 class="home__description">
+            A student majoring in Computer Science & Software Engineering in University of Washington Bothell
+        </h2>
+        <button class="home__tcontact">Contact me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
