--- a/index.html
+++ b/index.html
@@ -40,9 +40,41 @@
         <button class="home__tcontact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>
+            I'm interested in both front-end and back-end development. As of now, I planned to make a project related to front-end 
+            and another project related to back-end. I'm learning JavaScript,HTML,and CSS.
+            I'm also looking forward to learning React,NodeJS,MySQL,MongoDB,etc for the projects.
+        </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML,CSS,JavaScript</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fas fa-server"></i>
+                </div>
+                <div class="major__title">Back-end</div>
+                <div class="major__description">Java,JavaScript</div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/uwb.jpg" alt="UWB" class="job__logo">
+                <p class="job__name">Currently majoring in Computer Science & Software Engineering in University of Washington Bothell</p>
+                <p class="job__period">2022 Jan - Until now</p>
+            </div>
+        </div>
+        
+    </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
