--- a/index.html
+++ b/index.html
@@ -74,6 +74,74 @@
     </section>
     <!-- Skills -->
     <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            Passion for learning new technologies. Capable of working within a team enviornment and independently.
+            Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed. 
+        </p>
+        <div class="skillset">
+            <div class="skillset__left"></div>
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <span>HTML</span>
+                    <span>90%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                    <span>CSS</span>
+                    <span>90%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                    <span>JavaScript</span>
+                    <span>80%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                    <span>Java</span>
+                    <span>80%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                    <span>C++</span>
+                    <span>88%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                    <span>Phyton</span>
+                    <span>80%</span>
+                    <div class="skill__bar">
+                        <div class="skill_value">
+
+                        </div>
+                    </div>
+                </div>
+            <div class="skillset__right">
+                <h3 class="skillset__title">Tools</h3>
+                <ul class="tools_list">
+                    <li><span>Visual Studio Code</span></li>
+                    <li><span>Visual Studio</span></li>
+                    <li><span>Eclipse</span></li>
+                </ul>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Work -->
     <section id="work"></section>
