--- a/index.html
+++ b/index.html
@@ -177,7 +177,36 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/people1.png" alt="person1" class="testimonial__avatar">
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        To do
+                    </p>
+                    <p class="name">
+                        <a href="">Person1Name</a>
+                        / Samsung
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="testimonial">
+            <img src="imgs/people1.png" alt="person2" class="testimonial__avatar">
+            <div class="testimonial__speech-bubble">
+                <p>
+                    To do
+                </p>
+                <p class="name">
+                    <a href="">Person2Name</a>
+                    / Samsung
+                </p>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
