--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">yoonlee@uw.edu</h2>   
+        <div class="contact_links">
+            <a href="https://github.com/Potatojelly" target="blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <div class="contact__rights">
+            2022 Yoon - All rights reserved
+        </div>
+    </section>
 </body>
 </html>
