--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script scr="main.js" defer></script>
 </head>
 <body>
+    <h1>Heading</h1>
+    <h2>Heading</h2>
+    <h3>Heading</h3>
+    <P>Paragraph</P>
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo"></div>
