--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
     <script scr="main.js" defer></script>
 </head>
 <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <P>Paragraph</P>
     <!-- Navbar -->
     <nav id="navbar">
-        <div class="navbar__logo"></div>
+        <div class="navbar__logo">
             <img class="logo" alt="Yoon's profile logo" src="imgs/id-card-regular.png" >
             <a href="#">Yoon</a>
+        </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item active">Home</li>
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
             <li class="navbar__menu__item">My work</li>
