--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class="home__description">
             A student majoring in Computer Science & Software Engineering in University of Washington Bothell
         </h2>
-        <button class="home__tcontact">Contact me</button>
+        <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
     <section id="about">
