--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>
             I'm interested in both front-end and back-end development. As of now, I planned to make a project related to front-end 
@@ -53,28 +53,30 @@
                 <div class="major__icon">
                     <i class="fa-brands fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
-                <div class="major__description">HTML,CSS,JavaScript</div>
+                <h2 class="major__title">Front-end</h2>
+                <div class="major__description">HTML, CSS, JavaScript</div>
             </div>
             <div class="major">
                 <div class="major__icon">
                     <i class="fas fa-server"></i>
                 </div>
-                <div class="major__title">Back-end</div>
-                <div class="major__description">Java,JavaScript</div>
+                <h2 class="major__title">Back-end</h2>
+                <div class="major__description">Java, JavaScript</div>
             </div>
         </div>
         <div class="about__jobs">
             <div class="job">
                 <img src="imgs/uwb.jpg" alt="UWB" class="job__logo">
-                <p class="job__name">Currently majoring in Computer Science & Software Engineering in University of Washington Bothell</p>
-                <p class="job__period">2022 Jan - Until now</p>
+                <div class="job__description">
+                    <p class="job__name">Currently majoring in Computer Science & Software Engineering in University of Washington Bothell</p>
+                    <p class="job__period">2022 Jan - Until now</p>
+                </div> 
             </div>
         </div>
         
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -145,7 +147,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work_categories">
@@ -178,7 +180,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -209,7 +211,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">yoonlee@uw.edu</h2>   
         <div class="contact_links">
