--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
-        <h3>See what they say about me</h3>
-        <div class="testimonials">
+        <div class="testmoinals">
+            <h1>Testimonials</h1>
+            <h3>See what they say about me</h3>
             <div class="testimonial">
                 <img src="imgs/people1.png" alt="person1" class="testimonial__avatar">
                 <div class="testimonial__speech-bubble">
-                    <p>
+                    <p class="words">
                         To do
                     </p>
                     <p class="name">
@@ -224,17 +224,17 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <div class="testimonial">
-            <img src="imgs/people1.png" alt="person2" class="testimonial__avatar">
-            <div class="testimonial__speech-bubble">
-                <p>
-                    To do
-                </p>
-                <p class="name">
-                    <a href="">Person2Name</a>
-                    / Samsung
-                </p>
+            <div class="testimonial">
+                <div class="testimonial__speech-bubble">
+                    <p class="words">
+                        To do
+                    </p>
+                    <p class="name">
+                        <a href="">Person2Name</a>
+                        / Samsung
+                    </p>
+                </div>
+                <img src="imgs/people1.png" alt="person2" class="testimonial__avatar">
             </div>
         </div>
     </section>
