--- a/index.html
+++ b/index.html
@@ -176,65 +176,69 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
-        <h3>Projects</h3>
-        <div class="work_categories">
-            <button class="category__btn active">All <span class="category__count">8</span></button>
-            <button class="category__btn">Front-end <span class="category__count">4</span></button>
-            <button class="category__btn">Back-end <span class="category__count">4</span></button>
-        </div>
-        <div class="work__project">
-            <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
-                <img src="imgs/project1.png" alt="Project1" class="project__img">
-                <div class="project__description">
-                    <h3>Project1 Site</h3>
-                    <span>Clone coding with HTML and CSS</span>
-                </div>
-            </a>
-            <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
-                <img src="imgs/project2.png" alt="Project2" class="project__img">
-                <div class="project__description">
-                    <h3>Project2 Site</h3>
-                    <span>Clone coding with HTML and CSS</span>
-                </div>
-            </a>
-            <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
-                <img src="imgs/project3.png" alt="Project3" class="project__img">
-                <div class="project__description">
-                    <h3>Project3 Site</h3>
-                    <span>Clone coding with HTML and CSS</span>
-                </div>
-            </a>
+        <div class="section__container"></div>
+            <h1>My work</h1>
+            <h3>Projects</h3>
+            <div class="work_categories">
+                <button class="category__btn active">All <span class="category__count">8</span></button>
+                <button class="category__btn">Front-end <span class="category__count">4</span></button>
+                <button class="category__btn">Back-end <span class="category__count">4</span></button>
+            </div>
+            <div class="work__project">
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                    <img src="imgs/project1.png" alt="Project1" class="project__img">
+                    <div class="project__description">
+                        <h3>Project1 Site</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                    </div>
+                </a>
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                    <img src="imgs/project2.png" alt="Project2" class="project__img">
+                    <div class="project__description">
+                        <h3>Project2 Site</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                    </div>
+                </a>
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                    <img src="imgs/project3.png" alt="Project3" class="project__img">
+                    <div class="project__description">
+                        <h3>Project3 Site</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-        <div class="testmoinals">
-            <h1>Testimonials</h1>
-            <h3>See what they say about me</h3>
-            <div class="testimonial">
-                <img src="imgs/people1.png" alt="person1" class="testimonial__avatar">
-                <div class="testimonial__speech-bubble">
-                    <p class="words">
-                        To do
-                    </p>
-                    <p class="name">
-                        <a href="">Person1Name</a>
-                        / Samsung
-                    </p>
+        <div class="section__container"></div>
+            <div class="testmoinals">
+                <h1>Testimonials</h1>
+                <h3>See what they say about me</h3>
+                <div class="testimonial">
+                    <img src="imgs/people1.png" alt="person1" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p class="words">
+                            To do To do To do To do To do To do To do To do To do To do To do To do To do ToTo do To do To do To do To do To do To do To do To do To do To dTo do To do To do To do To do To do To do To do To do To do To do To do To do ToTo do To do To do To do To do To do To do To do To do To do o To do To do To doTo do To do
+                        </p>
+                        <p class="name">
+                            <a href="">Person1Name</a>
+                            / Samsung
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="testimonial">
-                <div class="testimonial__speech-bubble">
-                    <p class="words">
-                        To do
-                    </p>
-                    <p class="name">
-                        <a href="">Person2Name</a>
-                        / Samsung
-                    </p>
+                <div class="testimonial">
+                    <div class="testimonial__speech-bubble">
+                        <p class="words">
+                            To do To do To do To do To do To do To do To do To do To do To do To do To do ToTo do To do To do To do To do To do To do To do To To do To do To do To do To do To do To do To do To do To do To do To do To do ToTo do To do To do To do To do To do To do To do To do To do do To do  To doTo do To do
+                        </p>
+                        <p class="name">
+                            <a href="">Person2Name</a>
+                            / Samsung
+                        </p>
+                    </div>
+                    <img src="imgs/people1.png" alt="person2" class="testimonial__avatar">
                 </div>
-                <img src="imgs/people1.png" alt="person2" class="testimonial__avatar">
             </div>
         </div>
     </section>
