--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li class="navbar__menu__item">Testimonial</li>
             <li class="navbar__menu__item">Contact</li>
         </ul>
+        <button class="navbar__toggle-btn">
+            <i class="fa-solid fa-bars"></i>
+        </button>
     </nav>
     <!-- Home -->
     <section id="home">
