--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2 class="home__description">
             A student majoring in Computer Science & Software Engineering in University of Washington Bothell
         </h2>
-        <button class="home__contact">Contact me</button>
+        <button class="home__contact" data-link="#contact">Contact me</button>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
