--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="imgs/profilepic.jpg" alt="Yoon's profile photo" class="home__avatar">
-        <h1 class="home__title">Hello, <br> I'm Yoon Lee</h1>
-        <h2 class="home__description">
-            A student majoring in Computer Science & Software Engineering in University of Washington Bothell
-        </h2>
-        <button class="home__contact" data-link="#contact">Contact me</button>
+        <div class="home__container">
+            <img src="imgs/profilepic.jpg" alt="Yoon's profile photo" class="home__avatar">
+            <h1 class="home__title">Hello, <br> I'm Yoon Lee</h1>
+            <h2 class="home__description">
+                A student majoring in Computer Science & Software Engineering in University of Washington Bothell
+            </h2>
+            <button class="home__contact" data-link="#contact">Contact me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
