--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </h2>
             <button class="home__contact" data-link="#contact">Contact me</button>
         </div>
+        <!-- Arrow-->
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
@@ -260,5 +261,9 @@
             2022 Yoon - All rights reserved
         </div>
     </section>
+    <!-- Arrow up-->
+    <button class="arrow__up"> 
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
