--- a/index.html
+++ b/index.html
@@ -185,27 +185,27 @@
         <div class="section__container"></div>
             <h1>My work</h1>
             <h3>Projects</h3>
-            <div class="work_categories">
-                <button class="category__btn active">All <span class="category__count">8</span></button>
-                <button class="category__btn">Front-end <span class="category__count">4</span></button>
-                <button class="category__btn">Back-end <span class="category__count">4</span></button>
+            <div class="work__categories">
+                <button class="category__btn active" data-filter="*">All <span class="category__count">8</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end <span class="category__count">4</span></button>
+                <button class="category__btn" data-filter="back-end">Back-end <span class="category__count">4</span></button>
             </div>
             <div class="work__project">
-                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank" data-type="front-end">
                     <img src="imgs/project1.png" alt="Project1" class="project__img">
                     <div class="project__description">
                         <h3>Project1 Site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank" data-type="front-end">
                     <img src="imgs/project2.png" alt="Project2" class="project__img">
                     <div class="project__description">
                         <h3>Project2 Site</h3>
                         <span>Clone coding with HTML and CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank">
+                <a href="https://github.com/Potatojelly/portfolio" class="project" taget="blank" data-type="back-end">
                     <img src="imgs/project3.png" alt="Project3" class="project__img">
                     <div class="project__description">
                         <h3>Project3 Site</h3>
